test/e2e/resources/testrunner/admission.yaml
# Copyright 2019-Present Couchbase, Inc.
#
# Use of this software is governed by the Business Source License included in
# the file licenses/BSL-Couchbase.txt.  As of the Change Date specified in that
# file, in accordance with the Business Source License, use of this software
# will be governed by the Apache License, Version 2.0, included in the file
# licenses/APL2.txt.

---
apiVersion: v1
kind: ServiceAccount
metadata:
  name: couchbase-operator-admission
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: couchbase-operator-admission
rules:
- apiGroups:
  - couchbase.com
  resources:
  - couchbaseclusters
  verbs:
  - get
- apiGroups:
  - ""
  resources:
  - secrets
  verbs:
  - get
- apiGroups:
  - storage.k8s.io
  resources:
  - storageclasses
  verbs:
  - get
  - list
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: couchbase-operator-admission
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: couchbase-operator-admission
subjects:
- kind: ServiceAccount
  name: couchbase-operator-admission
  namespace: default
---
apiVersion: v1
kind: Secret
metadata:
  name: couchbase-operator-admission
type: Opaque
data:
  tls-cert-file: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUR5VENDQXJHZ0F3SUJBZ0lSQUk5b2dBK3RDbjhZc3ZRd2d2SG9YN3N3RFFZSktvWklodmNOQVFFTEJRQXcKS2pFb01DWUdBMVVFQXd3ZlEyOTFZMmhpWVhObElFOXdaWEpoZEc5eUlFRmtiV2x6YzJsdmJpQkRRVEFlRncweApPREEzTWpZeE1UTXpOVFJhRncweU9EQTNNak14TVRNek5UUmFNRE14TVRBdkJnTlZCQU1NS0dOdmRXTm9ZbUZ6ClpTMXZjR1Z5WVhSdmNpMWhaRzFwYzNOcGIyNHVaR1ZtWVhWc2RDNXpkbU13Z2dFaU1BMEdDU3FHU0liM0RRRUIKQVFVQUE0SUJEd0F3Z2dFS0FvSUJBUURLS2pyNXZWSjhMMDN4UHBTUjhMNVdXeWJwK29yZ2lTOFdUUkdXU3dLdwpnL1BQS1prUVR [...]
  tls-private-key-file: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV3QUlCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktvd2dnU21BZ0VBQW9JQkFRREtLanI1dlZKOEwwM3gKUHBTUjhMNVdXeWJwK29yZ2lTOFdUUkdXU3dLd2cvUFBLWmtRVGxQd1l5bHZxZHJGSkRaT3BVMEwzQmU1V0ZabApJc0ZnQUpaNkpmem1oMmxGaUlSRUREaEZraVVpaHdGMUlycSt2Q0cvekFzN2lGaDJPdWNTM3h5OVlmZ3ZoWVA5CmszdE9SREp6VDgvQmoxKzNCRnpGY1NkZi9Ec3dpYnVzazJaK0tuRldUNnJwRGF5UWhPeWhQaWN3VklxYnVmejkKNXA1V0FVVS9Yb2VVL3RsRDFCY2xibnB1Mnh2T3BGTmJWTHZ5dmNabGRGNkNud25QQVZOYUZ5ZG9Cd1dQcnpvcgpZUnVm [...]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: couchbase-operator-admission
spec:
  replicas: 1
  selector:
    matchLabels:
      app: couchbase-operator-admission
  template:
    metadata:
      labels:
        app: couchbase-operator-admission
    spec:
      containers:
      - name: couchbase-operator-admission
        image: couchbase/admission-controller:1.2.0-DP
        command:
        - couchbase-operator-admission
        args:
          - "--logtostderr"
          - "--stderrthreshold"
          - "0"
          - "--tls-cert-file"
          - "/var/run/secrets/couchbase.com/couchbase-operator-admission/tls-cert-file"
          - "--tls-private-key-file"
          - "/var/run/secrets/couchbase.com/couchbase-operator-admission/tls-private-key-file"
        ports:
        - name: https
          containerPort: 8443
        volumeMounts:
        - name: couchbase-operator-admission
          mountPath: "/var/run/secrets/couchbase.com/couchbase-operator-admission"
          readOnly: true
      volumes:
      - name: couchbase-operator-admission
        secret:
          secretName: couchbase-operator-admission
      serviceAccountName: couchbase-operator-admission
---
apiVersion: v1
kind: Service
metadata:
  name: couchbase-operator-admission
spec:
  selector:
    app: couchbase-operator-admission
  ports:
  - protocol: TCP
    port: 443
    targetPort: 8443
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: couchbase-operator-admission
webhooks:
- name: couchbase-operator-admission.default.svc
  rules:
  - apiGroups:
    - couchbase.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - couchbaseclusters
  clientConfig:
    service:
      namespace: default
      name: couchbase-operator-admission
      path: "/couchbaseclusters/validate"
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURjVENDQWxtZ0F3SUJBZ0lKQUlwTm1XMFZOZmllTUEwR0NTcUdTSWIzRFFFQkN3VUFNQ294S0RBbUJnTlYKQkFNTUgwTnZkV05vWW1GelpTQlBjR1Z5WVhSdmNpQkJaRzFwYzNOcGIyNGdRMEV3SGhjTk1UZ3dOekkyTVRBdwpOVFF4V2hjTk1qZ3dOekl6TVRBd05UUXhXakFxTVNnd0pnWURWUVFEREI5RGIzVmphR0poYzJVZ1QzQmxjbUYwCmIzSWdRV1J0YVhOemFXOXVJRU5CTUlJQklqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FROEFNSUlCQ2dLQ0FRRUEKeHNZMXNoTmM4WWloTUtLcUpkZG5McjVVcGlJZ0J6aG4vNDZ4LzlWT2psK3ljUlBEelRGNkh5dDJpdkZNbFc5Qgp2anlHUVlKMXcyeT [...]
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: couchbase-operator-admission
webhooks:
- name: couchbase-operator-admission.default.svc
  rules:
  - apiGroups:
    - couchbase.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - couchbaseclusters
  clientConfig:
    service:
      namespace: default
      name: couchbase-operator-admission
      path: "/couchbaseclusters/mutate"
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURjVENDQWxtZ0F3SUJBZ0lKQUlwTm1XMFZOZmllTUEwR0NTcUdTSWIzRFFFQkN3VUFNQ294S0RBbUJnTlYKQkFNTUgwTnZkV05vWW1GelpTQlBjR1Z5WVhSdmNpQkJaRzFwYzNOcGIyNGdRMEV3SGhjTk1UZ3dOekkyTVRBdwpOVFF4V2hjTk1qZ3dOekl6TVRBd05UUXhXakFxTVNnd0pnWURWUVFEREI5RGIzVmphR0poYzJVZ1QzQmxjbUYwCmIzSWdRV1J0YVhOemFXOXVJRU5CTUlJQklqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FROEFNSUlCQ2dLQ0FRRUEKeHNZMXNoTmM4WWloTUtLcUpkZG5McjVVcGlJZ0J6aG4vNDZ4LzlWT2psK3ljUlBEelRGNkh5dDJpdkZNbFc5Qgp2anlHUVlKMXcyeT [...]
